# TrainCW

./: .gitattributes  .pre-commit-config.yaml  CI_STATUS.md  CONTRIBUTING.md  DESIGN.md  IMPLEMENTATION.md  Makefile  README.md  TRAINING_DATA_PLAN.md  pyproject.toml  requirements.txt
.claude/: README.md  settings.json
.claude/commands/: add-module.md  check-all.md  explain-codebase.md  lint.md  optimize.md  review-architecture.md  review-data-generation.md  setup-dev.md  test.md
.github/workflows/: ci.yml
configs/: base_config.yaml
data/: README.md  __init__.py  audio_synthesis.py  dataset.py  generator.py  interference.py  noise.py  text_generator.py
morse/: __init__.py  morse_code.py  timing.py
scripts/: ci_check.sh  demo_generation.py  evaluate.py  export_model.py  generate_test_set.py  run_ci.sh  train.py
src/traincw/: __init__.py  cli.py
src/traincw/evaluation/: __init__.py  metrics.py
src/traincw/export/: __init__.py  to_coreml.py  to_onnx.py
src/traincw/models/: __init__.py  cnn_lstm_ctc.py  decoder.py  encoder.py
src/traincw/training/: __init__.py  curriculum.py  trainer.py
src/traincw/utils/: __init__.py  audio.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_audio.py  test_cli.py  test_generator.py  test_import.py  test_metrics.py  test_model.py  test_morse.py
